# deevo-auth

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.jsx  page.jsx
app/api/internal/create-user/: route.js
app/api/internal/developer/clients/: route.js
app/api/internal/generate-code/: route.js
app/api/oauth/client-info/: route.js
app/api/oauth/token/: route.js
app/api/oauth/userinfo/: route.js
app/consent/: page.jsx
app/dashboard/: page.jsx
app/developers/: page.jsx
app/login/: page.jsx
app/register/: page.jsx
app/test/: page.jsx
app/test/callback/: page.jsx
components/: DeevoLogo.jsx
lib/: auth-context.jsx  firebase-admin.js  firebase.js
scratch/: fix_auth.js  replace.js
sdk/: README.md  build.js  deevo-oauth-1.4.5.tgz  package.json
sdk-python/: README.md  pyproject.toml
sdk-python/deevo_oauth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/deevoauth/: __init__.py  client.py  errors.py
sdk/src/: index.js
test-app/: .env.example  README.md  package-lock.json  package.json  server.js  vercel.json
test-app/api/: me.js  verify.js
test-app/api/auth/: callback.js  login.js  logout.js
test-app/lib/: deevo.js  session.js
test-app/public/: dashboard.html  index.html
